src/components/App.css
body {
  background-color: #f5f1ea;
  font-size: 18px;
}

button, .button {
  cursor: pointer;
  border: 2px solid #822000;
  font-weight: bold; 
  background-color: #EBE1AD;
  border-radius: 15px;
  box-shadow: 0 0 5px #979AA4;
  padding: 0px;
  height: 44px;
  min-height: 44px;
  width: 44px;
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
}

.button__disabled {
  background-color: transparent;
  cursor: auto;
  border: 2px dashed #822000;
}

a {
  text-decoration-color: #822000;
  color: black;
}

h1 {
  font-family: "IM Fell Great Primer SC";
  font-variant: small-caps;
}

h1 a {
  color: #822000;
  text-decoration: none;
}

a:hover {
  color: #822000;
}

.main-footer-wrapper {
  padding-top: 68px;
  display: flex;
  align-items: center;
  flex-flow: column;
}

.aria-announcements {
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.main {
  display: flex;
  align-items: center;
  flex-flow: column;
  width: 100%;
}

.main__error   {
  padding-top: 0px;
}

.main-title {
  margin-top: 20px;
  color: #822000;
  text-align: center;
}

.sub-title {
  text-align: center;
}

.main-title__short {
  margin-bottom: 0px;
}

.form--input {
  border: 2px solid #822000;
  padding: 10px;
  border-radius: 15px;
  box-shadow: 0 0 5px #979AA4;
  width: 100%;
  min-width: 0;
}

.form--label {
  margin-bottom: 5px;
  font-size: 16px;
}

.form--label__error {
  font-weight: bold;
  color: red;
}

.hidden {
  display: none;
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

input[type="number"] {
    -moz-appearance: textfield;
}

/* Battle toolbar */
.battle-toolbar {
  display: flex;
  justify-content: space-around;
  border-top: 2px solid #822000;
  border-bottom: 2px solid #822000;
  height: 54px;
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
  background-color: #ebe2d3;
  position: fixed;
  top: 0;
  z-index: 1;
  box-shadow: 0 0 5px #979aa4;
}

/*
 * Remove sticky bar bahviour for landscape screens bigger than 600px.
 * On screen keyboards and the sticky bar leave a very small viewport.
 */
@media only screen and (max-width: 600px) and (orientation: landscape) {
  .main-footer-wrapper {
    padding-top: 0px;
  }

  .battle-toolbar {
    position: relative;
  }
}

.battle-toolbar--stat {
  display: flex;
  align-items: center;
  flex-flow: column;
  font-weight: bold;
  color: #822000;
  margin-top: 2px;
  max-width: 25%;
}

/* Remove most unimportant battle bar info for screens smaller than 768px */
@media only screen and (max-width: 768px) {
  .battle-toolbar--stat__extra2 {
    display: none;
  }

  .battle-toolbar--stat {
    max-width: 33%;
  }
}

/* Remove second-most unimportant battle bar info for screens smaller than 600px */
@media only screen and (max-width: 600px) and (orientation: portrait) {
  .battle-toolbar--stat__extra1 {
    display: none;
  }

  .battle-toolbar--stat {
    max-width: 50%;
  }
}

.battle-toolbar--stat-value {
  font-weight: normal;
  color: black;
  text-transform: capitalize;
  text-overflow: ellipsis;
  text-align: center;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
}

.battle-toolbar--button {
  margin-top: 5px;
}

.battle-toolbar--button__option {
  margin-top: 25px;
}

.battle-toolbar--options-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 40px;
}

.battle-toolbar--options-dropdown {
  border-bottom: 2px solid #822000;
  border-left: 2px solid #822000;
  border-right: 2px solid #822000;
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
  box-shadow: 0 5px 5px #979AA4;
  padding: 10px 10px;
  background: #ebe2d3;
  margin-top: 10px;
}

/* Input */

.input--form {
  width: 100%;
  grid-column: span 8;
  display: flex;
  flex-direction: column;
}

@media only screen and (max-width: 825px) {
  .input--form {
    grid-column: span 6;
  }
}

.input--number {
  grid-column: span 4;
}

.input-wrapper {
  display: flex;
  border: 2px solid #822000;
  border-radius: 15px;
  box-shadow: 0 0 5px #979aa4;
  height: 40px;
}

.input {
  width: 100%;
  height: 100%;
  background: white;
  border-radius: 15px;
  overflow: hidden;
  border: none;
  padding: 0 5px;
}

.input__button-right {
  border-right: 2px solid #822000;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.input__button-right-disabled {
  border-right: 2px dotted #822000;
}

.input__button-left {
  border-left: 2px solid #822000;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.input__button-left-disabled {
  border-left: 2px dotted #822000;
}

.input--submit {
  padding: 5px;
  background: #EBE1AD;
  border: none;
  box-shadow: none;
  margin: 0;
  height: 40px;
  min-height: 40px;
}

.input--submit__left {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.input--submit__right {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.input--submit__disabled {
  cursor: default;
  background: #f5f1ea;
}

.input__error {
  border: 2px solid red;
}

/* Creature toolbar */

@keyframes creature-toolbar-page1-fadein {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes creature-toolbar-page2-fadein {
  from { opacity: 0; }
  to { opacity: 1; }
}

.creature-toolbar {
  grid-gap: 22px;
  grid-row-gap: 10px;
  display: grid;
  grid-template-columns: repeat(auto-fit, 15px);
  grid-auto-rows: 1fr;
  animation-duration: 400ms;
  animation-timing-function: ease-in-out;
}

.creature-toolbar__page-1 {
  animation-name: creature-toolbar-page1-fadein;
}

.creature-toolbar__page-2 {
  animation-name: creature-toolbar-page2-fadein;
}

.creature-toolbar--select {
  background-color: white;
  box-sizing: border-box;
  display: block;
}

.creature-toolbar--button {
  margin-top: 27px;
  grid-column: span 2;
}
/* ... */

